JSW Devsb/src/objects/PIB_SO_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Active_Dealers_Last_3_months_E_I__c</fullName>
        <label>Active Dealers Last 3 months E&amp;I</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Dealers_Last_3_months_exclude__c</fullName>
        <label>Active Dealers Last 3 months exclude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHD_15_Day_Actuals__c</fullName>
        <label>CHD 15 Day Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.QTY__c</summarizedField>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.Product_Group__c</field>
            <operation>equals</operation>
            <value>CHD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.X15_Days_Checkbox__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CHD_Actuals__c</fullName>
        <label>CHD Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.QTY__c</summarizedField>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.Product_Group__c</field>
            <operation>equals</operation>
            <value>CHD</value>
        </summaryFilterItems>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CHD_Target__c</fullName>
        <label>CHD Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection_Actuals__c</fullName>
        <label>Collection Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collections_Target__c</fullName>
        <label>Collections Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_Redressal__c</fullName>
        <label>Complaint Redressal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ELP_Points_Target__c</fullName>
        <label>ELP Points Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLP_Registrations_Target__c</fullName>
        <label>MLP Registrations Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_ASM__c</fullName>
        <formula>Record_Owner__r.Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager(ASM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Employee_ID__c</fullName>
        <formula>Record_Owner__r.Manager.Employee_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_Actuals__c</fullName>
        <label>NSR Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.NSR_Value__c</summarizedField>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Dealer_Additions_Target__c</fullName>
        <label>Net Dealer Additions Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Dealers_Appointed_this_month__c</fullName>
        <label>New Dealers Appointed this month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_fo_MLP_Registrations__c</fullName>
        <label>No fo MLP Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Dealers_Target__c</fullName>
        <label>No of Active Dealers Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Influencer_Meets__c</fullName>
        <label>No of Influencer Meets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Leads_Converted__c</fullName>
        <label>No of Leads Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Site_Meets__c</fullName>
        <label>No of Project Site Meets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Site_Demos__c</fullName>
        <label>No of Site Demos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Trade_Actuals__c</fullName>
        <label>Non Trade Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.QTY__c</summarizedField>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.Distribution_Channel__c</field>
            <operation>equals</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Target__c</fullName>
        <formula>PSC_Target__c  +  CHD_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIB_ASM_Targets__c</fullName>
        <label>PIB ASM Targets</label>
        <referenceTo>PIB_ASM_Targets__c</referenceTo>
        <relationshipLabel>PIB SO Targets</relationshipLabel>
        <relationshipName>PIB_SO_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSC_15_Day_Actuals__c</fullName>
        <label>PSC 15 Day Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.QTY__c</summarizedField>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.Product_Group__c</field>
            <operation>equals</operation>
            <value>PSC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.X15_Days_Checkbox__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSC_Actuals__c</fullName>
        <label>PSC Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.QTY__c</summarizedField>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.Product_Group__c</field>
            <operation>equals</operation>
            <value>PSC</value>
        </summaryFilterItems>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSC_Target__c</fullName>
        <label>PSC Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_of_Meets__c</fullName>
        <label>Quality of Meets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PIB_SO_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_15_Day_Actuals__c</fullName>
        <formula>CHD_15_Day_Actuals__c  +  PSC_15_Day_Actuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 15 Day Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actuals__c</fullName>
        <formula>CHD_Actuals__c  +  PSC_Actuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Actuals__c</fullName>
        <label>Trade Actuals</label>
        <summarizedField>PIB_Volume_NSR_Actuals__c.QTY__c</summarizedField>
        <summaryFilterItems>
            <field>PIB_Volume_NSR_Actuals__c.Distribution_Channel__c</field>
            <operation>equals</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>PIB_Volume_NSR_Actuals__c.PIB_SO_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_NT_Target__c</fullName>
        <label>Trade/NT Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>Employee_Code__c +&apos;:&apos;+ Month__c +&apos;:&apos;+ Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X15_Day_Target__c</fullName>
        <label>15 Day Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>PIB SO Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIBSO-{0000000}</displayFormat>
        <label>PIB SO Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIB SO Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>